[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
axum = "0.6.0"
render = { git = "https://github.com/render-rs/render.rs" }
anyhow = "1.0.66"
serde = { version = "1", features = ["derive"] }
axum-extra = { version = "0.4.1", features = ["form", "query"] }
serde_html_form = "0.1.0"
mime = "0.3.16"

[patch.crates-io]
"serde_html_form" = { git = "https://github.com/thomaseizinger/serde_html_form", branch = "no-value-option" }
